--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -957,7 +957,7 @@ html.lock body::before {
 
 .index-service__card {
   position: relative;
-  min-height: 550px;
+  height: clamp(300px, 90vh, 500px);
   display: flex;
   align-items: flex-end;
   padding: 40px;
@@ -1255,11 +1255,6 @@ html.lock body::before {
   display: flex;
   justify-content: space-between;
   gap: 127px;
-}
-
-.footer__logo img {
-  width: 100%;
-  height: 100%;
 }
 
 .footer__menu {
@@ -1606,6 +1601,31 @@ section {
   display: flex;
   align-items: center;
   gap: 10px;
+}
+
+.form__controls-label {
+  position: relative;
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+}
+
+.form__controls-label input {
+  appearance: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -2;
+}
+
+.form__controls-label input:checked ~ img {
+  border: 2px solid #41a2d0;
+}
+
+.form__controls-label img {
+  width: 25px;
+  height: 25px;
+  object-fit: contain;
 }
 
 .form__bottom {
@@ -3399,11 +3419,17 @@ body::after {
   justify-content: space-between;
 }
 
+.mini-cart__char-item {
+  font-size: 12px;
+  color: #3a434b;
+}
+
 .mini-cart__info {
   flex: 1 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 5px;
 }
 
 .mini-cart__action {
@@ -3959,12 +3985,20 @@ body::after {
 }
 
 @media screen and (max-width: 768px) {
+  .index-catalog__inner {
+    flex-direction: column;
+  }
+
   .index-work__links {
     flex-wrap: wrap;
   }
 
   .hero__title {
     font-size: 35px;
+  }
+
+  .index-service__cards {
+    gap: 20px;
   }
 
   .header-under {
@@ -4244,7 +4278,8 @@ body::after {
   }
 
   .footer__logo {
-    width: 100px;
+    width: 100%;
+    height: 100%;
   }
 
   .footer__menu {
