--- a/main/core/theme/mb/templates/components/cart-item.html
+++ b/main/core/theme/mb/templates/components/cart-item.html
@@ -1,15 +1,21 @@
-{% load static %} {% load carts_tag %}{% for cart in carts %}
+{% load static %} {% load carts_tag %} {% load thumbnail %}{% for cart in carts %}
 <div class="mini-cart__item">
   <div class="mini-cart__thumb">
+    {% if cart.product.image %} {% thumbnail cart.product.image "70x70" format="WEBP" crop="center" as im %}
+    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" />
+    {% endthumbnail %} {% else %}
     <img src="{% static 'theme/mb/images/no-image.png' %}" alt="" />
+    {% endif %}
   </div>
   <div class="mini-cart__content">
     <div class="mini-cart__info">
       <a href="{{ cart.product.get_absolute_url }}" class="mini-cart__name">{{ cart.product.name }}</a>
       <p class="mini-cart__price">{{ cart.product.sell_price }} руб.</p>
-      {% for key, value in cart.selected_char.items %}
-      <p class="mini-cart__price">{{ key }} - {{ value }}</p>
-      {% endfor %}
+      <div class="mini-cart__char">
+        {% for key, value in cart.selected_char.items %}
+        <p class="mini-cart__char-item">{{ key }} - {{ value }}</p>
+        {% endfor %}
+      </div>
     </div>
     <div class="mini-cart__action">
       <a href="{% url 'cart_remove' %}" aria-label="Удаления товара из корзины" id="delete-card" class="mini-cart__delete remove-from-cart" data-cart-id="{{ cart.id }}">
