--- a/main/core/theme/mb/templates/components/popup.html
+++ b/main/core/theme/mb/templates/components/popup.html
@@ -64,3 +64,22 @@
     </div>
   </div>
 </div>
+
+<div id="zakaz" aria-hidden="true" class="popup">
+  <div class="popup__wrapper">
+    <div class="popup__content">
+      <button data-close type="button" class="popup__close"></button>
+      <div class="popup__loading">
+        <img src="{% static 'theme/mb/images/loading.gif' %}" alt="" />
+      </div>
+      <h2 class="popup__title">Заказать услугу</h2>
+      <form action="{% url 'reviews_form' %}" class="popup__form" method="POST" id="callback-form">
+        {% csrf_token %}
+        <input type="text" name="name" class="popup__form-controls" placeholder="Ваше имя" required />
+        <input type="text" name="phone" class="popup__form-controls" placeholder="номер телефона" data-tel-input required />
+        <input type="hidden" name="service" class="popup__form-controls" required />
+        <button type="submit" class="popup__form-submit">Отправить</button>
+      </form>
+    </div>
+  </div>
+</div>
