--- a/main/core/theme/mb/templates/pages/index.html
+++ b/main/core/theme/mb/templates/pages/index.html
@@ -7,13 +7,15 @@
         <div class="top-main__left">
           <div class="top-main__item">
             <div class="top-main__address">Яковлева, 41а</div>
-            <a href="tel:+73822210915" class="top-main__phone">+7(3822)-210-915
+            <a href="tel:+73822210915" class="top-main__phone"
+              >+7(3822)-210-915
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
             </a>
           </div>
           <div class="top-main__item">
             <div class="top-main__address">Демьяна Бедного, 16а ст1</div>
-            <a href="tel:+73822224018" class="top-main__phone">+7(3822)-224-018
+            <a href="tel:+73822224018" class="top-main__phone"
+              >+7(3822)-224-018
               <img src="{% static 'theme/mb/images/icon/phone-blue.svg' %}" alt="" />
             </a>
           </div>
@@ -69,34 +71,6 @@
     </div>
   </section>
 
-  <section class="index-service">
-    <div class="index-service__container">
-      <h2 class="_title index-service__title">Оказываемые виды услуг</h2>
-    </div>
-    <div class="index-service__cards">
-      <a href="#" class="index-service__card">
-        <img src="{% static 'theme/mb/images/service-1.jpg' %}" alt="">
-        <span class="index-service__count">01</span>
-        <p class="index-service__title">Изготовление памятников из гранита и мрамора</p>
-      </a>
-      <a href="#" class="index-service__card">
-        <span class="index-service__count">02</span>
-        <img src="{% static 'theme/mb/images/service-2.jpg' %}" alt="">
-        <p class="index-service__title">Установка памятников</p>
-      </a>
-      <a href="#" class="index-service__card">
-        <span class="index-service__count">03</span>
-        <img src="{% static 'theme/mb/images/service-3.jpg' %}" alt="">
-        <p class="index-service__title">Гравировка на памятниках</p>
-      </a>
-      <a href="#" class="index-service__card">
-        <span class="index-service__count">04</span>
-        <img src="{% static 'theme/mb/images/service-4.jpg' %}" alt="">
-        <p class="index-service__title">Благоустройство мест захоронения</p>
-      </a>
-    </div>
-  </section>
-
   <section class="index-catalog">
     <div class="index-catalog__container">
       <h2 class="index-catalog__title">Каталог</h2>
@@ -107,91 +81,8 @@
           {% endfor %} {% endif %}
         </div>
         <div class="index-catalog__content">
-          <ul class="index-catalog__filter filter">
-            <li class="filter__item">
-              <span class="filter__item-text">Цвет</span>
-              <ul class="filter__sublist _active">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-            <li class="filter__item">
-              <span class="filter__item-text">Материал</span>
-              <ul class="filter__sublist">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-            <li class="filter__item">
-              <span class="filter__item-text">Высота</span>
-              <ul class="filter__sublist">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-            <li class="filter__item">
-              <span class="filter__item-text">Для кого</span>
-              <ul class="filter__sublist">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-            <li class="filter__item">
-              <span class="filter__item-text">Религия</span>
-              <ul class="filter__sublist">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-            <li class="filter__item">
-              <span class="filter__item-text">Порода камня</span>
-              <ul class="filter__sublist">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-            <li class="filter__item">
-              <span class="filter__item-text">Тип исполнения</span>
-              <ul class="filter__sublist">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-            <li class="filter__item">
-              <span class="filter__item-text">Цена</span>
-              <ul class="filter__sublist">
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Черный</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Серый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Голубой</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Фиолетовый</a></li>
-                <li class="filter__sublist-item"><a href="" class="filter__sublist-link">Светло-серый</a></li>
-              </ul>
-            </li>
-          </ul>
           <div class="index-catalog__cards">
-            {% if products %} {% for product in products %} {% include '../includes/card.html' with product=product %}
-            {% endfor %} {% else %}
+            {% if products %} {% for product in products %} {% include '../includes/card.html' with product=product %} {% endfor %} {% else %}
             <div class="empty-info">
               <p>Товара нет</p>
             </div>
@@ -210,7 +101,34 @@
     </div>
   </section>
 
+  <section class="index-service">
+    <div class="index-service__container">
+      <h2 class="_title index-service__title">Оказываемые виды услуг</h2>
 
+      <div class="index-service__cards">
+        <a href="#" class="index-service__card">
+          <img src="{% static 'theme/mb/images/service-1.jpg' %}" alt="" />
+          <span class="index-service__count">01</span>
+          <p class="index-service__title">Изготовление памятников из гранита и мрамора</p>
+        </a>
+        <a href="#" class="index-service__card">
+          <span class="index-service__count">02</span>
+          <img src="{% static 'theme/mb/images/service-2.jpg' %}" alt="" />
+          <p class="index-service__title">Установка памятников</p>
+        </a>
+        <a href="#" class="index-service__card">
+          <span class="index-service__count">03</span>
+          <img src="{% static 'theme/mb/images/service-3.jpg' %}" alt="" />
+          <p class="index-service__title">Гравировка на памятниках</p>
+        </a>
+        <a href="#" class="index-service__card">
+          <span class="index-service__count">04</span>
+          <img src="{% static 'theme/mb/images/service-4.jpg' %}" alt="" />
+          <p class="index-service__title">Благоустройство мест захоронения</p>
+        </a>
+      </div>
+    </div>
+  </section>
 
   <section class="index-work">
     <div class="index-work__container">
@@ -245,20 +163,12 @@
         <div class="index-reviews__reviews reviews">
           <div class="reviews__slider swiper">
             <div class="reviews__wrapper swiper-wrapper">
+              {% if reviews %} {% for review in reviews %}
               <div class="reviews__slide swiper-slide">
-                <p class="reviews__text">
-                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на
-                  отлично, рекомендую надёжная организация. Спасибо большое
-                </p>
-                <p class="reviews__name">Nina Kartashova</p>
+                <p class="reviews__text">{{ review.text }}</p>
+                <p class="reviews__name">{{ review.name }}</p>
               </div>
-              <div class="reviews__slide swiper-slide">
-                <p class="reviews__text">
-                  Заказала памятник и оформление захоронения, сделали всё отлично и раньше срока сдали работу, на
-                  отлично, рекомендую надёжная организация. Спасибо большое
-                </p>
-                <p class="reviews__name">Nina Kartashova</p>
-              </div>
+              {% endfor %} {% endif %}
             </div>
             <div class="swiper-pagination"></div>
           </div>
@@ -266,83 +176,6 @@
       </div>
     </div>
   </section>
-
-  <section class="index-contact">
-    <div class="index-contact__container">
-      <div class="index-contact__grid">
-        <div class="index-contact__item">
-          <h2 class="index-contact__title">Мы готовы ответить на все <span>ваши вопросы</span></h2>
-          <ul class="index-contact__list">
-            <li>
-              <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Проконсультируем</span> по материалу памятника</p>
-            </li>
-            <li>
-              <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Поможем определиться </span>с типом памятника и заказать его
-                производство</p>
-            </li>
-            <li>
-              <img src="{% static 'theme/mb/images/icon/check-green.svg' %}" alt="" class="index-contact__list-icon" />
-              <p class="index-contact__list-text"><span>Расскажем все</span> про доставку и установку</p>
-            </li>
-          </ul>
-        </div>
-        <div class="index-contact__item">
-          <div class="index-contact__mobile" style="background-image: url('{% static 'theme/mb/images/mobile.png' %}')">
-            <div class="index-contact__logo">
-              <img src="{% static 'theme/mb/images/logo-black.png' %}" alt="" />
-            </div>
-            <p class="index-contact__mobile-text">
-              Свяжитесь с нами! <br />
-              Мы обязательно поможем!
-            </p>
-            <div class="index-contact__mobile-phones">
-              <a href="">+7(3822)-210-915<img src="{% static 'theme/mb/images/icon/phone-black.svg' %}" alt="" /></a>
-              <a href="">+7-900-921-09-15<img src="{% static 'theme/mb/images/icon/phone-mobile.svg' %}" alt="" /></a>
-            </div>
-            <a href="" class="index-contact__call _btn">Позвонить</a>
-          </div>
-        </div>
-        <div class="index-contact__item">
-          <form action="{% url 'contact_form' %}" method="POST" class="form index-contact__form">
-            {% csrf_token %}
-            <h3 class="form__title">Заполните форму</h3>
-            <p class="form__text">Оставьте заявку - мы обязательно с вами свяжемся</p>
-            <div class="form__inner">
-              <input type="text" name="name" id="id_name" class="form__controls" placeholder="Ваше имя" />
-              <input type="tel" name="phone" id="id_phone" class="form__controls" placeholder="Номер телефона" />
-              <div class="form__social-inner">
-                <label for="tg" class="form__controls-label">
-                  <input type="checkbox" id="tg" name="social" />
-                  <img src="{% static 'theme/mb/images/icon/tg.svg' %}" alt="" />
-                </label>
-                <label for="vk" class="form__controls-label">
-                  <input type="checkbox" id="vk" name="social" />
-                  <img src="{% static 'theme/mb/images/icon/vk.svg' %}" alt="" />
-                </label>
-                <label for="wh" class="form__controls-label">
-                  <input type="checkbox" id="wh" name="social" />
-                  <img src="{% static 'theme/mb/images/icon/wh.svg' %}" alt="" />
-                </label>
-              </div>
-              <div class="form__bottom">
-                <button type="submit" class="form__submit _btn">Отправить</button>
-                <div class="form__agreement">
-                  <input type="checkbox" name="agrement" id="id_agrement" checked />
-                  <label for="id_agreement" class="form__label">
-                    Я даю свое согласие на обработку персональных данных и соглашаюсь с <a href="">политикой
-                      конфиденциальности</a>
-                  </label>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  {% include "../components/map.html" %}
+  {% include "../includes/contact-block.html" %} {% include "../components/map.html" %}
 </main>
 {% endblock %}
