--- a/main/core/admin/templates/gallery/gallery_add.html
+++ b/main/core/admin/templates/gallery/gallery_add.html
@@ -33,6 +33,10 @@
               <label for="{{ form.image.id_for_label }}" class="form__controls-label">Фотография :</label>
               {{ form.image }} {{ form.image.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.cat_detail.id_for_label }}" class="form__controls-label">Выводить в категорию :</label>
+              {{ form.cat_detail }} {{ form.cat_detail.errors }}
+            </div>
           </div>
         </div>
       </div>
