--- a/main/core/theme/mb/templates/components/footer.html
+++ b/main/core/theme/mb/templates/components/footer.html
@@ -43,7 +43,7 @@
           </div>
           <div class="footer__contact-list">
             <p class="footer__contact-city">Время работы:</p>
-            <p class="footer__contact-address">Пн-Вт: 09:00-18:00</p>
+            <p class="footer__contact-address">Пн-Пт: 09:00-18:00</p>
             <p class="footer__contact-address">Сб-Вс: 10:00-17:00</p>
           </div>
           <div class="footer__contact-list">
