--- a/main/core/theme/mb/templates/components/footer.html
+++ b/main/core/theme/mb/templates/components/footer.html
@@ -42,6 +42,11 @@
             <p class="footer__contact-address">Демьяна Бедного, 16а ст1</p>
           </div>
           <div class="footer__contact-list">
+            <p class="footer__contact-city">г.Новосибирск</p>
+            <p class="footer__contact-address">Мичурина, 24</p>
+            <a href="tel:+79025672451">+7(902) 567-24-51</a>
+          </div>
+          <div class="footer__contact-list">
             <p class="footer__contact-city">Время работы:</p>
             <p class="footer__contact-address">Пн-Пт: 09:00-18:00</p>
             <p class="footer__contact-address">Сб-Вс: 10:00-17:00</p>
