--- a/main/core/theme/mb/css/main.css
+++ b/main/core/theme/mb/css/main.css
@@ -1108,6 +1108,43 @@ html.lock body::before {
   justify-content: center;
 }
 
+.login {
+  height: 100vh;
+  background-color: white;
+}
+
+.login__container {
+  height: 100vh;
+}
+
+.login__inner {
+  display: flex;
+}
+
+.login__sidebar {
+  padding: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.login__sidebar ._title-h2 {
+  font-size: 35px;
+  font-weight: 600;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+.login__images {
+  height: 100vh;
+  width: 100%;
+}
+
+.login__images img {
+  width: 100%;
+  height: 100%;
+}
+
 .about__grid {
   display: grid;
   grid-template-columns: 1fr 300px;
@@ -2678,35 +2715,6 @@ body::after {
 #time-work .item-contact__hidden p {
   font-size: 12px;
   line-height: 140%;
-}
-
-.login {
-  margin: 0px 10px;
-}
-
-.login__inner {
-  max-width: 800px;
-  margin: 0 auto;
-  background-color: white;
-  box-shadow: 0 20px 60px 2px rgba(149, 144, 135, 0.15);
-  padding: 30px;
-  border-radius: 46px;
-}
-
-.login__reset {
-  display: flex;
-  gap: 20px;
-  justify-content: flex-end;
-  margin-top: 40px;
-}
-
-.login__link:hover {
-  color: #d71635;
-}
-
-.login ._title-h2 {
-  text-align: center;
-  margin-bottom: 20px;
 }
 
 .register__inner {
