--- a/#src/templates/theme/base.html
+++ b/#src/templates/theme/base.html
@@ -16,6 +16,7 @@
     rel="stylesheet" />
   <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css?_v=20240126172157" />
+  <meta name="yandex-verification" content="28b257e33ea51829" />
 </head>
 
 <body>
