--- a/main/core/theme/mb/templates/pages/blog/blog_detail.html
+++ b/main/core/theme/mb/templates/pages/blog/blog_detail.html
@@ -49,7 +49,7 @@
                 d="M12 9a3 3 0 1 1 0 6 3 3 0 1 1 0-6m0-4.5c5 0 9.27 3.1 11 7.5-1.73 4.4-6 7.5-11 7.5S2.73 16.4 1 12c1.73-4.4 6-7.5 11-7.5M3.18 12a9.82 9.82 0 0 0 17.64 0 9.82 9.82 0 0 0-17.64 0z">
               </path>
             </svg>
-            <span>2141</span>
+            <span>{{ article.view_count }}</span>
           </div>
         </div>
       </div>
