--- a/#src/templates/admin/blog/blog_post/post_add.html
+++ b/#src/templates/admin/blog/blog_post/post_add.html
@@ -40,7 +40,16 @@
               {{ form.description }} {{ form.description.errors }}
             </div>
           </div>
-          <div class="page-content__col"></div>
+          <div class="page-content__col">
+            <div class="form__group">
+              <label for="{{ form.image.id_for_label }}" class="form__controls-label">Изображение : </label>
+              {{ form.image }} {{ form.image.errors }}
+            </div>
+            <div class="form__group">
+              <label for="{{ form.status.id_for_label }}" class="form__controls-label">Статус : </label>
+              {{ form.status }} {{ form.status.errors }}
+            </div>
+          </div>
         </div>
       </div>
       <div class="page-content" id="seo">
