--- a/#src/templates/admin/blog/blog_post/post_edit.html
+++ b/#src/templates/admin/blog/blog_post/post_edit.html
@@ -45,6 +45,10 @@
               <label for="{{ form.image.id_for_label }}" class="form__controls-label">Изображение : </label>
               {{ form.image }} {{ form.image.errors }}
             </div>
+            <div class="form__group">
+              <label for="{{ form.status.id_for_label }}" class="form__controls-label">Статус : </label>
+              {{ form.status }} {{ form.status.errors }}
+            </div>
           </div>
         </div>
       </div>
